--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="footer">
-                <p>Copyright © The Odin Project 2023 | By Dion Chamika</p>
+                <p>Copyright - 2023 © The Odin Project | By Dion Chamika</p>
             </div>
         </div>
     </body>
